fixed a minor ui issue on firefox

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -174,7 +174,7 @@ height: 32px;
     a.forgot {
         float: right;
         margin-right: 30px;
-        margin-top: -10px;
+        margin-top: -5px;
         margin-bottom: 2px;
     }
 
